--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,8 @@ repositories {
 
 dependencies {
     compile "net.dv8tion:JDA:4.1.1_127"
+    compile group: "org.apache.logging.log4j", name:"log4j-api", version: "2.13.1"
+    compile group: "org.apache.logging.log4j", name:"log4j-core", version: "2.13.1"
 }
 
 compileJava.options.encoding = "UTF-8"
